syntax = "proto3";

option java_multiple_files = true;
option java_package = "protos";
//option java_outer_classname = "CrushNodeProto";
//option objc_class_prefix = "CNP";

package commons;

// The greeting service definition.
service GetNode {
    // Sends a greeting
    rpc GetNode (CrushNodeRequest) returns (CrushNodeReply) {}
}

// The request message containing the user's name.
message CrushNodeRequest {
    int32 nodeID = 1;
}

message CrushNodeReply {
    int32 nodeID = 1;
    string type = 2;
    int32 size = 3;
    int32 alive_size = 4;
    bool is_osd = 5;
    bool failed = 6;
    bool overloaded = 7;
    repeated CrushNodeReply children = 8;
}